icons for exlcusive section

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 <link href='https://fonts.googleapis.com/css?family=Lato:900,700' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Quicksand:300,400,700' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 
 <!-- Styles -->
 <link rel="stylesheet" type="text/css" href="style/font-awesome.css" />
@@ -302,7 +303,7 @@ data-alt : the url of the image that will be shown as background of the homepage
           <!-- POP Text -->
           <div class="block-text mrgn-bottom30" data-animation="true" data-animation-style="zoomIn">
             <div>
-              <ul>
+              <ul class="pop-section-list">
                 <li>Poptik is more than 2x more likely to draw the attention of consumers than the most compelling High Visibility Enhancements.</li>
                 <li>A Poptik-ated product carries with it a heightened perception of value vs. other products.</li>
                 <li>Poptik is patent protected and is a powerful measure to inhibit counterfeit product.</li>
@@ -338,18 +339,18 @@ data-alt : the url of the image that will be shown as background of the homepage
                       <div class="exclusive-container">
                             <div class="exclusive-container-left">
                               <ul class="exclusive-list-style-left">
-                                  <li>CPG</li>
-                                  <li>Apparel</li>
-                                  <li>Ticketing and Access</li>
-                                  <li>Product embellishment</li>
+                                  <li class="fa fa-cube">CPG</li>
+                                  <li class="fa fa-user">Apparel</li>
+                                  <li class="fa fa-ticket">Ticketing and Access</li>
+                                  <li class="fa fa-plus">Product embellishment</li>
                                 </ul>
                               </div>
                             <div class="exclusive-container-right">
                               <ul class="exclusive-list-style-right">
-                                  <li>Cards(rewards, credit, gift)</li>
-                                  <li>Labeling</li>
-                                  <li>Direct Marketing</li>
-                                  <li>Point of Sale</li>
+                                  <li class="fa fa-credit-card">Cards(rewards, credit, gift)</li>
+                                  <li class="fa fa-tags">Labeling</li>
+                                  <li class="fa fa-send-o">Direct Marketing</li>
+                                  <li class="fa fa-desktop">Point of Sale</li>
                               </ul>
                             </div>
                           </div>
@@ -383,7 +384,7 @@ data-alt : the url of the image that will be shown as background of the homepage
 
           <!-- Phone Number -->
           <div class="hidden-element" id="hidden-phone-number">
-            <p><a href="tel:+1-555-555-5555">1- 555 - 555 - 5555</a></p>
+            <p><a href="#">Explore</a></p>
             <p>
               <a href="mailto:explore@hellophonic.com" target="_top">explore@hellophonic.com</a>
             </p>
