fixed more spacing issues

--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@ data-alt : the url of the image that will be shown as background of the homepage
                  </p>
           </div>
         </div>
+      </div>
 <!-- Kept Service Icons in just in case. -->
 <div class="home-block first-after-home" id="devices">
      <div class="block-contents">
@@ -307,15 +308,12 @@ data-alt : the url of the image that will be shown as background of the homepage
 
           <!-- POP Text -->
           <div class="block-text mrgn-bottom30" data-animation="true" data-animation-style="zoomIn">
-            <div>
-              <ul>
-                <li>Poptik is more than 2x more likely to draw the attention of consumers than the most compelling High Visibility Enhancements.</li>
-                <li>A Poptik-ated product carries with it a heightened perception of value vs. other products.</li>
-                <li>Poptik is patent protected and is a powerful measure to inhibit counterfeit product.</li>
-                <li>Millennials LOVE Poptik.  So do Gen Z consumers.  Our technology embodies a variety of the virtues that these generations have come to expect from things they interact with: visually stunning, fresh/new/not over saturated, game changing!</li>
-              </ul>
-            </div>
-          </div>
+              <p>
+                Poptik is more than 2x more likely to draw the attention of consumers than the most compelling High Visibility Enhancements.
+                A Poptik-ated product carries with it a heightened perception of value vs. other products.
+                Poptik is patent protected and is a powerful measure to inhibit counterfeit product.
+                Millennials LOVE Poptik.  So do Gen Z consumers.  Our technology embodies a variety of the virtues that these generations have come to expect from things they interact with: visually stunning, fresh/new/not over saturated, game changing!
+              </p>
       <div class="clear"></div>
 
     </div>
