added media queries for exclusive section

--- a/index.html
+++ b/index.html
@@ -342,20 +342,20 @@ data-alt : the url of the image that will be shown as background of the homepage
                       Poptik is a “first to market” aesthetic that consumers have never seen…ever.  It is only being made available to an exclusive list of vertical leading, millennial-facing brands.  But the applications are vast:
                       </p>
                       <div class="exclusive-container">
-                            <div class="exclusive-container-left">
-                              <ul class="exclusive-list-style-left">
-                                  <li class="fa fa-cube">CPG</li>
-                                  <li class="fa fa-user">Apparel</li>
-                                  <li class="fa fa-ticket">Ticketing and Access</li>
-                                  <li class="fa fa-plus">Product embellishment</li>
+                            <div class="exclusive-container-list left">
+                              <ul>
+                                  <li><i class="fa fa-cube"></i>CPG</li>
+                                  <li><i class="fa fa-user"></i>Apparel</li>
+                                  <li><i  class="fa fa-ticket"></i>Ticketing and Access</li>
+                                  <li><i class="fa fa-plus"></i>Product embellishment</li>
                                 </ul>
                               </div>
-                            <div class="exclusive-container-right">
-                              <ul class="exclusive-list-style-right">
-                                  <li class="fa fa-credit-card">Cards(rewards, credit, gift)</li>
-                                  <li class="fa fa-tags">Labeling</li>
-                                  <li class="fa fa-send-o">Direct Marketing</li>
-                                  <li class="fa fa-desktop">Point of Sale</li>
+                            <div class="exclusive-container-list right">
+                              <ul>
+                                  <li><i class="fa fa-credit-card"></i>Cards(rewards, credit, gift)</li>
+                                  <li><i class="fa fa-tags"></i>Labeling</li>
+                                  <li><i class="fa fa-send-o"></i>Direct Marketing</li>
+                                  <li><i class="fa fa-desktop"></i>Point of Sale</li>
                               </ul>
                             </div>
                           </div>
