added trademark next to poptik

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ data-alt : the url of the image that will be shown as background of the homepage
      <div class="block-contents">
 
           <!-- Block Title -->
-          <h2 class="block-title" data-animation="true" data-animation-style="zoomIn">POPTIK</h2>
+          <h2 class="block-title" data-animation="true" data-animation-style="zoomIn">POPTIK<sup>&trade;</sup></h2>
 
           <!-- About Text -->
           <div class="block-text mrgn-bottom30" data-animation="true" data-animation-style="zoomIn">
@@ -159,7 +159,7 @@ data-alt : the url of the image that will be shown as background of the homepage
                  vertical leading brands exclusive access to this patented print technology, helping expose the eyes of the consumer to the magic
                  and Wow factor of Sub Optic, for the first time.</p>
                  <p class="welcomecolor">
-                  Welcome to poptik
+                  Welcome to Poptik
                  </p>
           </div>
         </div>
