added modal to fluid section of device and fixed modal in header to be responsive

--- a/index.html
+++ b/index.html
@@ -117,23 +117,12 @@ data-alt : the url of the image that will be shown as background of the homepage
           </div>
 
           <!-- CTA Button -->
-          <div class="cta-container">
+          <div class="service cta-container"  data-animation="true" data-animation-style="zoomIn">
                <!-- <a href="#about" class="scroll">See the Magic</a> -->
                <!-- Trigger/Open The Modal -->
-            <a id="myBtn">SUBOPTIC PRINT</a>
+            <a id="myBtn" href="ajax_contents/services/suboptic.htm" class="load-service">DISCOVER SUBOPTIC PRINT</a>
 
             <!-- The Modal -->
-            <div id="myModal" class="modal">
-
-              <!-- Modal content -->
-              <div class="modal-content">
-                <span class="close">x</span>
-                <iframe width="500" height="350"
-                src="">
-                </iframe>
-              </div>
-
-            </div>
 
           </div>
 
@@ -246,6 +235,7 @@ data-alt : the url of the image that will be shown as background of the homepage
                      </div>
 
                      <!--Services -->
+                    <a href="ajax_contents/services/fluid.htm" class="load-service">
                      <div class="service" data-animation="true" data-animation-style="zoomIn">
                      <!-- <a href="ajax_contents/services/motionpictures.htm" class="load-service"> -->
                         <div class="service-inner">
@@ -254,8 +244,8 @@ data-alt : the url of the image that will be shown as background of the homepage
                              </div> -->
                              <h4>FLUID MOTION</h4>
                         </div>
-                </div>
-
+                      </div>
+                    </a>
                 <!--SERVICES-->
                 <div class="service" data-animation="true" data-animation-style="zoomIn">
                 <!-- <a href="ajax_contents/services/motionpictures.htm" class="load-service"> -->
@@ -376,7 +366,7 @@ data-alt : the url of the image that will be shown as background of the homepage
     <!--- class for the pokadots to show --->
 
      <!-- Block Title -->
-     <h2 class="block-title explore-block">Explore Poptik</h2>
+     <h2 class="block-title explore-block">Explore Poptik<sup>&trade;</sup></h2>
      <p class="contact-intro">Contact us to begin a discussion about accessing Poptik for your brand</p>
 
      <!-- Buttons -->
@@ -391,7 +381,6 @@ data-alt : the url of the image that will be shown as background of the homepage
 
           <!-- Phone Number -->
           <div class="hidden-element" id="hidden-phone-number">
-            <p><a href="#">Explore</a></p>
             <p>
               <a href="mailto:explore@hellophonic.com" target="_top">explore@hellophonic.com</a>
             </p>
@@ -515,9 +504,10 @@ data-alt : the url of the image that will be shown as background of the homepage
           <ul>
               <li><a href="#services" class="scroll">POPTIK</a></li>
               <li><a href="#magic" class="scroll">MAGIC</a></li>
+              <li><a href="#devices" class="scroll">Devices</a></li>
               <li><a href="#pop" class="scroll">POP</a></li>
               <li><a href="#exclusive" class="scroll">EXCLUSIVE</a></li>
-              <li><a href="#contact" class="scroll">MAKE IT POP</a></li>
+              <li><a href="#contact" class="scroll">EXPLORE POPTIK</a></li>
           </ul>
      </div>
 
